# OpenFabric

ai-test/: Challenge.md  DOCUMENTATION.md  readme.md
ai-test/app/: README.md  main.py  memory.db  pyproject.toml  streamlit_app.py
ai-test/app/core/: llm.py  memory.py  remote.py  stub.py
